
plugins:
- added first version of SOS type 1 constraint handler (cons_sos1.{c,h})
- added first version of SOS type 2 constraint handler (cons_sos2.{c,h})
- less aggressive scaling in linear constraint handler presolve to improve numerics
- added reader for pseudo-Boolean problems (reader_opb.{c,h})

parameters:
- new parameter "constraints/linear/aggregatevariables" to search for aggregations in equations in the presolving step
- changed parameter default values for the priority of presolver "dualfix" and "inttobinary"
- new parameter "constraint/linear/upgrade/binpack" to enable or disable the linear upgrading process
- new parameter "constraint/linear/upgrade/eqknapsack" to enable or disable the linear upgrading process
- new parameter "constraint/linear/upgrade/invarknapsack" to enable or disable the linear upgrading process
- new parameter "constraint/linear/upgrade/knapsack" to enable or disable the linear upgrading process
- new parameter "constraint/linear/upgrade/logicor" to enable or disable the linear upgrading process
- new parameter "constraint/linear/upgrade/setppc" to enable or disable the linear upgrading process
- new parameter "constraint/linear/upgrade/varbound" to enable or disable the linear upgrading process

fixed bugs:
- added handling of the case of roundable variables with 0 objective in presol_dualfix.c
- fixed handling of unbounded variables with 0 objective in SCIPlpGetModifiedPseudo[Proved]Objval() (lp.c)
- fixed CTRL-C if NO_SIGACTION is set (e.g., for MinGW)
- fixed bug that a missing CONSTRANS in constraint handler leads to NULL pointer as constraint data for the
  copied constraints instead of pointer copies of the consdata (as explained in the constraint handler "HowTo")
- fixed bug with reading empty lines in TSP example
- fixed bug with writing the MIP relaxation to a file concerning the objective function; in case the original 